fix: set remove the pipe symbol from organization name template in the certificate handlebars template

--- a/views/certificate.hbs
+++ b/views/certificate.hbs
@@ -347,7 +347,7 @@
 
     <div class='certificate-content'>
       <div class='header'>
-        <div class='organization'>{{organizationName|}}</div>
+        <div class='organization'>{{organizationName}}</div>
         <h1 class='certificate-title'>{{certificateTitle}}</h1>
         <div class='subtitle'>{{certificateSubtitle}}</div>
       </div>
