--- a/views/certificate-monochrome.hbs
+++ b/views/certificate-monochrome.hbs
@@ -32,8 +32,8 @@
       .certificate {
         background: white;
         border: 4px solid #000;
-        width: 650px;
-        height: 900px;
+        width: 794px;
+        height: 1123px;
         padding: 70px;
         position: relative;
       }
@@ -348,7 +348,7 @@
 
       @page {
         size: A4;
-        margin: 0.5in;
+        margin: 0;
       }
     </style>
   </head>
